--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Relógio Digital</title>
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <div class="relogio">
@@ -29,6 +29,6 @@
         <span class="tempo">Segundos</span>
       </div>
     </div>
-    <script src="./script/script.js"></script>
+    <script src="./assets/script/script.js"></script>
   </body>
 </html>
